--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html{
     justify-content: center;
 
     background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.3)),
-    url(assets/img/img-fondo.jpg);
+    url(../assets/img/img-fondo.jpg);
 }
 
 .counter-title{
