--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,13 @@ html{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.3)),
+    url(../assets/img/img-fondo.jpg);
+    
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .counter-title{
